started on log reading